--- a/themes/dark/swayosd.css
+++ b/themes/dark/swayosd.css
@@ -1,5 +1,5 @@
-@define-color background-color #2b1f1c;
-@define-color border-color #f2dcbb;
-@define-color label #ece9e4;
-@define-color image #ece9e4;
-@define-color progress #ece9e4;
+@define-color background-color #102306;
+@define-color border-color #bba7ae;
+@define-color label #c3c8c0;
+@define-color image #c3c8c0;
+@define-color progress #c3c8c0;
