--- a/themes/dark/walker.css
+++ b/themes/dark/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #e9bb86;
-@define-color text #ece9e4;
-@define-color base #2b1f1c;
-@define-color border #f2dcbb;
-@define-color foreground #ece9e4;
-@define-color background #2b1f1c;
+@define-color selected-text #40b97c;
+@define-color text #c3c8c0;
+@define-color base #102306;
+@define-color border #bba7ae;
+@define-color foreground #c3c8c0;
+@define-color background #102306;
