--- a/themes/dark/waybar.css
+++ b/themes/dark/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #f2dcbb;
-@define-color background #2b1f1c;
+@define-color foreground #bba7ae;
+@define-color background #102306;
