cmus added. plugged mpv to color switches. minor edits with keybinds

--- a/themes/dark/swayosd.css
+++ b/themes/dark/swayosd.css
@@ -1,5 +1,5 @@
-@define-color background-color #102306;
-@define-color border-color #bba7ae;
-@define-color label #c3c8c0;
-@define-color image #c3c8c0;
-@define-color progress #c3c8c0;
+@define-color background-color #240e0c;
+@define-color border-color #ad6c6e;
+@define-color label #c8c2c2;
+@define-color image #c8c2c2;
+@define-color progress #c8c2c2;
