--- a/themes/dark/walker.css
+++ b/themes/dark/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #40b97c;
-@define-color text #c3c8c0;
-@define-color base #102306;
-@define-color border #bba7ae;
-@define-color foreground #c3c8c0;
-@define-color background #102306;
+@define-color selected-text #c6a79f;
+@define-color text #c8c2c2;
+@define-color base #240e0c;
+@define-color border #ad6c6e;
+@define-color foreground #c8c2c2;
+@define-color background #240e0c;
