--- a/themes/light/swayosd.css
+++ b/themes/light/swayosd.css
@@ -1,6 +1,5 @@
-@define-color background-color #faf4ed;
-@define-color border-color #575279;
-@define-color label #575279;
-@define-color image #575279;
-@define-color progress #575279;
-
+@define-color background-color #faf9f9;
+@define-color border-color #c5c3c4;
+@define-color label #3e3e3e;
+@define-color image #3e3e3e;
+@define-color progress #3e3e3e;
