--- a/themes/light/walker.css
+++ b/themes/light/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #88C0D0;
-@define-color text #575279;
-@define-color base #faf4ed;
-@define-color border #575279;
-@define-color foreground #575279;
-@define-color background #faf4ed;
+@define-color selected-text #c7a28b;
+@define-color text #3e3e3e;
+@define-color base #faf9f9;
+@define-color border #c5c3c4;
+@define-color foreground #3e3e3e;
+@define-color background #faf9f9;
