--- a/themes/light/waybar.css
+++ b/themes/light/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #575279;
-@define-color background #faf4ed;
+@define-color foreground #c5c3c4;
+@define-color background #faf9f9;
