minor cosmetic changes: fixed waybar tray, opacity rules, icon set

--- a/themes/dark/swayosd.css
+++ b/themes/dark/swayosd.css
@@ -1,5 +1,5 @@
-@define-color background-color #240e0c;
-@define-color border-color #ad6c6e;
-@define-color label #c8c2c2;
-@define-color image #c8c2c2;
-@define-color progress #c8c2c2;
+@define-color background-color #271c19;
+@define-color border-color #ac6d7a;
+@define-color label #c9c6c5;
+@define-color image #c9c6c5;
+@define-color progress #c9c6c5;
