--- a/themes/dark/walker.css
+++ b/themes/dark/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #c6a79f;
-@define-color text #c8c2c2;
-@define-color base #240e0c;
-@define-color border #ad6c6e;
-@define-color foreground #c8c2c2;
-@define-color background #240e0c;
+@define-color selected-text #c7a699;
+@define-color text #c9c6c5;
+@define-color base #271c19;
+@define-color border #ac6d7a;
+@define-color foreground #c9c6c5;
+@define-color background #271c19;
