--- a/themes/dark/waybar.css
+++ b/themes/dark/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #ad6c6e;
-@define-color background #240e0c;
+@define-color foreground #ac6d7a;
+@define-color background #271c19;
