zsh theme change + some wallpapers.

--- a/themes/dark/swayosd.css
+++ b/themes/dark/swayosd.css
@@ -1,5 +1,5 @@
-@define-color background-color #271c19;
-@define-color border-color #ac6d7a;
-@define-color label #c9c6c5;
-@define-color image #c9c6c5;
-@define-color progress #c9c6c5;
+@define-color background-color #21140e;
+@define-color border-color #7a95a9;
+@define-color label #c7c4c2;
+@define-color image #c7c4c2;
+@define-color progress #c7c4c2;
