--- a/themes/dark/walker.css
+++ b/themes/dark/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #c7a699;
-@define-color text #c9c6c5;
-@define-color base #271c19;
-@define-color border #ac6d7a;
-@define-color foreground #c9c6c5;
-@define-color background #271c19;
+@define-color selected-text #aa8872;
+@define-color text #c7c4c2;
+@define-color base #21140e;
+@define-color border #7a95a9;
+@define-color foreground #c7c4c2;
+@define-color background #21140e;
