--- a/themes/dark/waybar.css
+++ b/themes/dark/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #ac6d7a;
-@define-color background #271c19;
+@define-color foreground #7a95a9;
+@define-color background #21140e;
