nvim cpp, hypr keybinding list fix, some smaller hypr tweaks.

--- a/themes/dark/swayosd.css
+++ b/themes/dark/swayosd.css
@@ -1,5 +1,5 @@
-@define-color background-color #21140e;
-@define-color border-color #7a95a9;
-@define-color label #c7c4c2;
-@define-color image #c7c4c2;
-@define-color progress #c7c4c2;
+@define-color background-color #211007;
+@define-color border-color #6f96a4;
+@define-color label #c7c3c1;
+@define-color image #c7c3c1;
+@define-color progress #c7c3c1;
