--- a/themes/dark/walker.css
+++ b/themes/dark/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #aa8872;
-@define-color text #c7c4c2;
-@define-color base #21140e;
-@define-color border #7a95a9;
-@define-color foreground #c7c4c2;
-@define-color background #21140e;
+@define-color selected-text #aa7853;
+@define-color text #c7c3c1;
+@define-color base #211007;
+@define-color border #6f96a4;
+@define-color foreground #c7c3c1;
+@define-color background #211007;
