--- a/themes/light/swayosd.css
+++ b/themes/light/swayosd.css
@@ -1,5 +1,5 @@
-@define-color background-color #faf9f9;
-@define-color border-color #c5c3c4;
-@define-color label #3e3e3e;
-@define-color image #3e3e3e;
-@define-color progress #3e3e3e;
+@define-color background-color #fcfbfb;
+@define-color border-color #9fa3a5;
+@define-color label #3f3e3e;
+@define-color image #3f3e3e;
+@define-color progress #3f3e3e;
