--- a/themes/dark/waybar.css
+++ b/themes/dark/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #7a95a9;
-@define-color background #21140e;
+@define-color foreground #6f96a4;
+@define-color background #211007;
