--- a/themes/light/walker.css
+++ b/themes/light/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #c7a28b;
-@define-color text #3e3e3e;
-@define-color base #faf9f9;
-@define-color border #c5c3c4;
-@define-color foreground #3e3e3e;
-@define-color background #faf9f9;
+@define-color selected-text #c5a19b;
+@define-color text #3f3e3e;
+@define-color base #fcfbfb;
+@define-color border #9fa3a5;
+@define-color foreground #3f3e3e;
+@define-color background #fcfbfb;
