--- a/themes/light/waybar.css
+++ b/themes/light/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #c5c3c4;
-@define-color background #faf9f9;
+@define-color foreground #9fa3a5;
+@define-color background #fcfbfb;
