nvim: oil,harpoon, cpp. autarky: rounded every pop-up.

--- a/themes/dark/swayosd.css
+++ b/themes/dark/swayosd.css
@@ -1,5 +1,5 @@
-@define-color background-color #211007;
-@define-color border-color #6f96a4;
-@define-color label #c7c3c1;
-@define-color image #c7c3c1;
-@define-color progress #c7c3c1;
+@define-color background-color #27201e;
+@define-color border-color #aa7e7e;
+@define-color label #c9c7c6;
+@define-color image #c9c7c6;
+@define-color progress #c9c7c6;
