--- a/themes/dark/walker.css
+++ b/themes/dark/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #aa7853;
-@define-color text #c7c3c1;
-@define-color base #211007;
-@define-color border #6f96a4;
-@define-color foreground #c7c3c1;
-@define-color background #211007;
+@define-color selected-text #c7bbad;
+@define-color text #c9c7c6;
+@define-color base #27201e;
+@define-color border #aa7e7e;
+@define-color foreground #c9c7c6;
+@define-color background #27201e;
