--- a/themes/dark/waybar.css
+++ b/themes/dark/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #6f96a4;
-@define-color background #211007;
+@define-color foreground #aa7e7e;
+@define-color background #27201e;
