--- a/config/swayosd/style.css
+++ b/config/swayosd/style.css
@@ -1,7 +1,7 @@
 @import "../autarky/current/theme/swayosd.css";
 
 window {
-  border-radius: 0;
+  border-radius: 12px;
   opacity: 0.97;
   border: 2px solid @border-color;
 
@@ -20,7 +20,7 @@ image {
 }
 
 progressbar {
-  border-radius: 0;
+  border-radius: 12px;
 }
 
 progress {
