--- a/themes/dark/waybar.css
+++ b/themes/dark/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #aa7e7e;
-@define-color background #27201e;
+@define-color foreground #9da882;
+@define-color background #1f2119;
