--- a/themes/dark/walker.css
+++ b/themes/dark/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #c7bbad;
-@define-color text #c9c7c6;
-@define-color base #27201e;
-@define-color border #aa7e7e;
-@define-color foreground #c9c7c6;
-@define-color background #27201e;
+@define-color selected-text #92a95d;
+@define-color text #c7c7c5;
+@define-color base #1f2119;
+@define-color border #9da882;
+@define-color foreground #c7c7c5;
+@define-color background #1f2119;
