September Update (nvim, tmux, latex)
nvim changes to color handling, some documentation, and tmux fixed tmux
keybinds

tmux configuration and session-picker (3 sessions for now)

latex install now default (typst is almost the same hassle for a few
syntax benefits, plus it is not integrated anywhere yet)

starship ribbon format
file browser is now nemo, calendar opens proton.calendar

attempted to automate gtk-theme changes. There's so many nitpicks and 3
different coexisting packages so it is extremely fickle. Plus gtk-4
glitches a lot with nvidia (hence the nemo change)

--- a/themes/dark/swayosd.css
+++ b/themes/dark/swayosd.css
@@ -1,5 +1,5 @@
-@define-color background-color #1f2119;
-@define-color border-color #9da882;
-@define-color label #c7c7c5;
-@define-color image #c7c7c5;
-@define-color progress #c7c7c5;
+@define-color background-color #272424;
+@define-color border-color #c7b7b5;
+@define-color label #c9c8c8;
+@define-color image #c9c8c8;
+@define-color progress #c9c8c8;
