--- a/themes/dark/walker.css
+++ b/themes/dark/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #92a95d;
-@define-color text #c7c7c5;
-@define-color base #1f2119;
-@define-color border #9da882;
-@define-color foreground #c7c7c5;
-@define-color background #1f2119;
+@define-color selected-text #c5a19b;
+@define-color text #c9c8c8;
+@define-color base #272424;
+@define-color border #c7b7b5;
+@define-color foreground #c9c8c8;
+@define-color background #272424;
