--- a/themes/dark/waybar.css
+++ b/themes/dark/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #9da882;
-@define-color background #1f2119;
+@define-color foreground #c7b7b5;
+@define-color background #272424;
