Nvim, tmux, system font
added nvim session manager, tmux session saver (for reboots)
cosmetics: changed system font where ever I could, might look horrible
on install but that's a corner kick I'll take next time.

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -6,7 +6,7 @@
   /* background-color: transparent; */
   color: @foreground;
   min-height: 0;
-  font-family: CaskaydiaMono Nerd Font Propo;
+  font-family: JetBrainsMono Nerd Font Mono;
   font-size: 18px;
 }
 
