--- a/themes/dark/waybar.css
+++ b/themes/dark/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #c7b7b5;
-@define-color background #272424;
+@define-color foreground #aa5228;
+@define-color background #19100b;
