--- a/themes/light/swayosd.css
+++ b/themes/light/swayosd.css
@@ -1,5 +1,5 @@
-@define-color background-color #fcfbfb;
-@define-color border-color #9fa3a5;
-@define-color label #3f3e3e;
-@define-color image #3f3e3e;
-@define-color progress #3f3e3e;
+@define-color background-color #f4f4f4;
+@define-color border-color #c7b7b5;
+@define-color label #3d3d3d;
+@define-color image #3d3d3d;
+@define-color progress #3d3d3d;
