--- a/themes/light/walker.css
+++ b/themes/light/walker.css
@@ -1,6 +1,6 @@
 @define-color selected-text #c5a19b;
-@define-color text #3f3e3e;
-@define-color base #fcfbfb;
-@define-color border #9fa3a5;
-@define-color foreground #3f3e3e;
-@define-color background #fcfbfb;
+@define-color text #3d3d3d;
+@define-color base #f4f4f4;
+@define-color border #c7b7b5;
+@define-color foreground #3d3d3d;
+@define-color background #f4f4f4;
