--- a/themes/light/waybar.css
+++ b/themes/light/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #9fa3a5;
-@define-color background #fcfbfb;
+@define-color foreground #c7b7b5;
+@define-color background #f4f4f4;
