--- a/config/swayosd/style.css
+++ b/config/swayosd/style.css
@@ -9,7 +9,7 @@ window {
 }
 
 label {
-  font-family: 'CaskaydiaMono Nerd Font', monospace;
+  font-family: 'JetBrainsMono Nerd Font', monospace;
   font-size: 11pt;
 
   color: @label;
