--- a/default/walker/themes/autarky-default.css
+++ b/default/walker/themes/autarky-default.css
@@ -22,7 +22,7 @@ slider,
 }
 
 * {
-  font-family: 'CaskaydiaMono Nerd Font', monospace;
+  font-family: 'JetBrainsMono Nerd Font', monospace;
   font-size: 18px;
 }
 
