--- a/themes/dark/swayosd.css
+++ b/themes/dark/swayosd.css
@@ -1,5 +1,5 @@
-@define-color background-color #272424;
-@define-color border-color #c7b7b5;
-@define-color label #c9c8c8;
-@define-color image #c9c8c8;
-@define-color progress #c9c8c8;
+@define-color background-color #19100b;
+@define-color border-color #aa5228;
+@define-color label #c5c3c2;
+@define-color image #c5c3c2;
+@define-color progress #c5c3c2;
