--- a/themes/dark/walker.css
+++ b/themes/dark/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #c5a19b;
-@define-color text #c9c8c8;
-@define-color base #272424;
-@define-color border #c7b7b5;
-@define-color foreground #c9c8c8;
-@define-color background #272424;
+@define-color selected-text #aa7853;
+@define-color text #c5c3c2;
+@define-color base #19100b;
+@define-color border #aa5228;
+@define-color foreground #c5c3c2;
+@define-color background #19100b;
