removed zoxide, back to full top waybar, remove omz ancillary files
useless with fzf and typically quantum leaps to wherever on typos or
similar named folders.
back to full top waybar bc waybar cannot selectively allow click-through
so transparent bits are dead-zones.

--- a/themes/dark/swayosd.css
+++ b/themes/dark/swayosd.css
@@ -1,5 +1,5 @@
-@define-color background-color #19100b;
-@define-color border-color #aa5228;
-@define-color label #c5c3c2;
-@define-color image #c5c3c2;
-@define-color progress #c5c3c2;
+@define-color background-color #1d160c;
+@define-color border-color #aa7e4e;
+@define-color label #c6c4c2;
+@define-color image #c6c4c2;
+@define-color progress #c6c4c2;
