--- a/themes/dark/walker.css
+++ b/themes/dark/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #aa7853;
-@define-color text #c5c3c2;
-@define-color base #19100b;
-@define-color border #aa5228;
-@define-color foreground #c5c3c2;
-@define-color background #19100b;
+@define-color selected-text #aa8c65;
+@define-color text #c6c4c2;
+@define-color base #1d160c;
+@define-color border #aa7e4e;
+@define-color foreground #c6c4c2;
+@define-color background #1d160c;
