--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -2,7 +2,7 @@
 
 * {
   /* make it a solid bar: */
-  /* background-color: @background; */
+  background-color: @background;
   /* background-color: transparent; */
   color: @foreground;
   min-height: 0;
@@ -26,7 +26,7 @@ tooltip {
 .modules-center,
 .modules-right {
   margin-top: 0px;
-  background-color: transparent;
+  /* background-color: transparent; */
 }
 
 .modules-left {
@@ -56,7 +56,7 @@ tooltip {
   padding: 0px 10px;
   border-radius: 10px;
   background-color: @background;
-  border: 3px solid @foreground;
+  border: 0px solid @foreground;
 }
 
 .popup-menu {
@@ -64,7 +64,7 @@ tooltip {
   padding: 0px 10px;
   border-radius: 10px;
   background-color: @background;
-  border: 3px solid @foreground;
+  border: 5px solid @foreground;
 }
 
 #workspaces,
@@ -74,6 +74,6 @@ tooltip {
   background-color: @background;
   min-width: 12px;
   margin: 0 6px;
-  border: 3px solid @foreground;
+  border: 0px solid @foreground;
 }
 
