--- a/themes/dark/waybar.css
+++ b/themes/dark/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #aa5228;
-@define-color background #19100b;
+@define-color foreground #aa7e4e;
+@define-color background #1d160c;
