walker update (fixed breaking changes from yay -S)

--- a/themes/light/swayosd.css
+++ b/themes/light/swayosd.css
@@ -1,5 +1,5 @@
-@define-color background-color #f4f4f4;
-@define-color border-color #c7b7b5;
-@define-color label #3d3d3d;
-@define-color image #3d3d3d;
-@define-color progress #3d3d3d;
+@define-color background-color #f2f3f4;
+@define-color border-color #4797be;
+@define-color label #3c3c3d;
+@define-color image #3c3c3d;
+@define-color progress #3c3c3d;
