--- a/themes/dark/walker.css
+++ b/themes/dark/walker.css
@@ -1,6 +1,3 @@
-@define-color selected-text #aa8c65;
-@define-color text #c6c4c2;
-@define-color base #1d160c;
-@define-color border #aa7e4e;
-@define-color foreground #c6c4c2;
-@define-color background #1d160c;
+@define-color window_bg_color #19100b;
+@define-color accent_bg_color #aa5228;
+@define-color theme_fg_color #c5c3c2;
