--- a/themes/light/walker.css
+++ b/themes/light/walker.css
@@ -1,6 +1,3 @@
-@define-color selected-text #c5a19b;
-@define-color text #3d3d3d;
-@define-color base #f4f4f4;
-@define-color border #c7b7b5;
-@define-color foreground #3d3d3d;
-@define-color background #f4f4f4;
+@define-color window_bg_color #f2f3f4;
+@define-color accent_bg_color #4797be;
+@define-color theme_fg_color #3c3c3d;
