--- a/themes/light/waybar.css
+++ b/themes/light/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #c7b7b5;
-@define-color background #f4f4f4;
+@define-color foreground #4797be;
+@define-color background #f2f3f4;
