--- a/config/walker/themes/autarky/style.css
+++ b/config/walker/themes/autarky/style.css
@@ -1,7 +1,4 @@
-/* @define-color window_bg_color #1f1f28; */
-/* @define-color accent_bg_color #54546d; */
-/* @define-color theme_fg_color #16F529; */
-@import url("file://~/.config/autarky/current/theme/walker.css");
+@import "../../../autarky/current/theme/walker.css");
 
 * {
   all: unset;
