--- a/config/walker/themes/dmenu_250/style.css
+++ b/config/walker/themes/dmenu_250/style.css
@@ -1,3 +1,2 @@
-@import url("file://~/.config/autarky/current/theme/walker.css");
-@import url("file://~/.config/walker/themes/autarky/style.css");
+@import "../autarky/style.css");
 
