installation tweaks for retries. slimmer nvim.

--- a/themes/dark/waybar.css
+++ b/themes/dark/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #aa5228;
-@define-color background #19100b;
+@define-color foreground #c2aaa5;
+@define-color background #262120;
