--- a/themes/dark/swayosd.css
+++ b/themes/dark/swayosd.css
@@ -1,5 +1,5 @@
-@define-color background-color #19100b;
-@define-color border-color #aa5228;
-@define-color label #c5c3c2;
-@define-color image #c5c3c2;
-@define-color progress #c5c3c2;
+@define-color background-color #262120;
+@define-color border-color #c2aaa5;
+@define-color label #c8c7c7;
+@define-color image #c8c7c7;
+@define-color progress #c8c7c7;
