--- a/themes/dark/walker.css
+++ b/themes/dark/walker.css
@@ -1,3 +1,3 @@
-@define-color window_bg_color #19100b;
-@define-color accent_bg_color #aa5228;
-@define-color theme_fg_color #c5c3c2;
+@define-color window_bg_color #262120;
+@define-color accent_bg_color #c2aaa5;
+@define-color theme_fg_color #c8c7c7;
