nvim, app preferences.
slimming nvim: removed dedicated codefolder plugin
app preferences: gnumeric instead of the whole libreoffice suite,
inkscape for diagrams/sketches

--- a/themes/dark/swayosd.css
+++ b/themes/dark/swayosd.css
@@ -1,5 +1,5 @@
-@define-color background-color #262120;
-@define-color border-color #c2aaa5;
-@define-color label #c8c7c7;
-@define-color image #c8c7c7;
-@define-color progress #c8c7c7;
+@define-color background-color #21190f;
+@define-color border-color #aa7f50;
+@define-color label #c7c5c3;
+@define-color image #c7c5c3;
+@define-color progress #c7c5c3;
