--- a/themes/dark/waybar.css
+++ b/themes/dark/waybar.css
@@ -1,2 +1,2 @@
-@define-color foreground #c2aaa5;
-@define-color background #262120;
+@define-color foreground #aa7f50;
+@define-color background #21190f;
