--- a/themes/dark/walker.css
+++ b/themes/dark/walker.css
@@ -1,3 +1,3 @@
-@define-color window_bg_color #262120;
-@define-color accent_bg_color #c2aaa5;
-@define-color theme_fg_color #c8c7c7;
+@define-color window_bg_color #21190f;
+@define-color accent_bg_color #aa7f50;
+@define-color theme_fg_color #c7c5c3;
